@@ -29,6 +29,10 @@ NOT RELEASED YET
     * ``bzr init`` will now print a little less verbose output.
       (Marius Kruger)
 
+    * VirtualVersionedFiles now implements
+      ``iter_lines_added_or_present_in_keys``. This allows the creation of 
+      new branches based on stacked bzr-svn branches. (#311997)
+
     * Rule-based preferences can now accept multiple patterns for a set of
       rules.  (Marius Kruger)
 
